--- a/StarProject/Views/Emps/Create.cshtml
+++ b/StarProject/Views/Emps/Create.cshtml
@@ -92,8 +92,8 @@
     </div>
 
     <div class="form-group mt-4">
-        <button type="submit" class="btn btn-primary btn-lg" onclick="return validateAndSubmit()">
-            新增員工
+        <button type="submit" class="btn btn-lg" style="background-color:#2B4C8C;color:white"  onclick="return validateAndSubmit()">
+            新增員工 
         </button>
         <a asp-action="Index" class="btn btn-secondary btn-lg ml-2">返回列表</a>
     </div>
